Bump dependency versions, including upgrading to Java 21